fixed footer, letter spacing for quote

--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,7 @@ body, html{
     font-size: 48px;
     text-align: center;
     font-weight: 400;
+    letter-spacing: 6px;
     text-shadow: 
     -2px -2px 0 var(--white_color),
      2px -2px 0 var(--white_color),
@@ -353,7 +354,7 @@ body, html{
 .footer_image {
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 440px;
     background-image: url('../images/footer.png');
     background-size: cover;
     background-position: center bottom;
